--- a/security-test/pom.xml
+++ b/security-test/pom.xml
@@ -10,9 +10,10 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>security-test</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>security-test</name>
     <description>Demo project for Spring Boot</description>
+
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -68,6 +69,7 @@
     </dependencies>
 
     <build>
+        <finalName>temp-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
